--- a/index.html
+++ b/index.html
@@ -237,6 +237,6 @@
         <div class="spinner"></div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="app.js?v=2"></script>
 </body>
 </html>
