Add timestamp cache buster and fix nginx JS caching

--- a/index.html
+++ b/index.html
@@ -237,6 +237,6 @@
         <div class="spinner"></div>
     </div>
 
-    <script src="app.js?v=3"></script>
+    <script src="app.js?cb=1734455400"></script>
 </body>
 </html>
