Fix maintenance tab display issue - change section to div

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 </section>
 
                 <!-- Maintenance Tab -->
-                <section id="maintenanceTab" class="tab-content" style="display: none;">
+                <div id="maintenanceTab" class="tab-content" style="display: none;">
                     <div class="tab-header">
                         <h2>⚠️ System Maintenance</h2>
                         <p class="warning-text">⚠️ WARNING: These operations are DESTRUCTIVE and cannot be undone!</p>
@@ -322,7 +322,7 @@
                             </tbody>
                         </table>
                     </div>
-                </section>
+                </div>
             </div>
         </main>
     </div>
