--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 </section>
 
                 <!-- Maintenance Tab -->
-                <div id="maintenanceTab" class="tab-content" style="display: none;">
+                <div id="maintenanceTab" class="tab-content">
                     <div class="tab-header">
                         <h2>⚠️ System Maintenance</h2>
                         <p class="warning-text">⚠️ WARNING: These operations are DESTRUCTIVE and cannot be undone!</p>
