Force cache bust for maintenance tab fix

--- a/index.html
+++ b/index.html
@@ -356,6 +356,6 @@
         <div class="spinner"></div>
     </div>
 
-    <script src="app.js?cb=1734455400"></script>
+    <script src="app.js?v=maintenance-fix-001"></script>
 </body>
 </html>
