Fix maintenance tab HTML structure - close activeTab div properly

--- a/index.html
+++ b/index.html
@@ -217,9 +217,10 @@
                         </table>
                     </div>
                 </section>
+            </div>
 
-                <!-- Maintenance Tab -->
-                <div id="maintenanceTab" class="tab-content">
+            <!-- Maintenance Tab -->
+            <div id="maintenanceTab" class="tab-content">
                     <div class="tab-header">
                         <h2>⚠️ System Maintenance</h2>
                         <p class="warning-text">⚠️ WARNING: These operations are DESTRUCTIVE and cannot be undone!</p>
