Add file browser to maintenance tab for visual file deletion confirmation

--- a/index.html
+++ b/index.html
@@ -323,6 +323,20 @@
                             </tbody>
                         </table>
                     </div>
+
+                    <!-- File Browser Section -->
+                    <div class="maintenance-section">
+                        <div class="section-header">
+                            <h3>📁 Server File Browser</h3>
+                            <p>Browse audio files on the server to confirm deletions</p>
+                            <button id="refreshFilesBtn" class="btn btn-secondary">
+                                🔄 Refresh Files
+                            </button>
+                        </div>
+                        <div id="fileTreeContainer" class="file-tree-container">
+                            <div class="loading">Loading file tree...</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
